# serializer version: 1
# name: TestBuildCompileFixPrompt.test_includes_code_and_error
  '''
  ## Broken Code
  
  ```python
  class Memory: pass
  ```
  
  ## Error
  
  **Syntax error**: unexpected indent at line 5
  
  Fix the error and output the complete corrected code in a ```python``` block.
  '''
# ---
# name: TestBuildCompileFixPrompt.test_includes_error_type_label
  '''
  ## Broken Code
  
  ```python
  x
  ```
  
  ## Error
  
  **Import whitelist violation**: Disallowed import: numpy
  
  Fix the error and output the complete corrected code in a ```python``` block.
  '''
# ---
# name: TestBuildObservationGenerationPrompt.test_includes_text_and_schema
  '''
  Given the following text, create an Observation object to store this information in memory.
  
  Text: Paris is the capital.
  
  The Observation must conform to this schema:
  Fields:
    - raw: str
  
  Output ONLY a valid JSON object matching the schema fields. No explanation.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_feedback_and_ground_truth
  '''
  Evaluation result: Score: 0.0 (incorrect)
  Ground truth: Paris
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_ground_truth_label
  '''
  Evaluation result: ok
  Ground truth: 42
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  schema
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildQueryGenerationPrompt.test_includes_question_and_schema
  '''
  Given the following question, generate a query to retrieve relevant memory.
  
  Question: What is the capital?
  
  The query must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_handles_empty_optional_fields
  '''
  ## Current Memory Program (iteration 1)
  
  ```python
  x
  ```
  
  ## Evaluation Score: 0.500
  
  ## Failed Cases
  
  ### Failed Case 1
  Question: q
  Expected: a
  Got: o
  Score: 0.0
  
  
  ## Task
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_code_and_score
  '''
  ## Current Memory Program (iteration 3)
  
  ```python
  class Memory: pass
  ```
  
  ## Evaluation Score: 0.420
  
  ## Failed Cases
  
  
  ## Task
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_failed_cases
  '''
  ## Current Memory Program (iteration 1)
  
  ```python
  code here
  ```
  
  ## Evaluation Score: 0.000
  
  ## Failed Cases
  
  ### Failed Case 1
  Question: What is X?
  Expected: 42
  Got: unknown
  Score: 0.0
  Conversation:
    [user]: What is X?
    [assistant]: unknown
  Memory logs:
    - Stored: fact about X
    - Query: What is X
  
  
  ## Task
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_limits_to_5_cases
  '''
  ## Current Memory Program (iteration 1)
  
  ```python
  x
  ```
  
  ## Evaluation Score: 0.000
  
  ## Failed Cases
  
  ### Failed Case 1
  Question: q0
  Expected: a0
  Got: wrong
  Score: 0.0
  
  ### Failed Case 2
  Question: q1
  Expected: a1
  Got: wrong
  Score: 0.0
  
  ### Failed Case 3
  Question: q2
  Expected: a2
  Got: wrong
  Score: 0.0
  
  ### Failed Case 4
  Question: q3
  Expected: a3
  Got: wrong
  Score: 0.0
  
  ### Failed Case 5
  Question: q4
  Expected: a4
  Got: wrong
  Score: 0.0
  
  
  ## Task
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  
  '''
# ---
# name: TestBuildResponsePrompt.test_includes_question_and_retrieved
  '''
  Answer the following question using ONLY the retrieved information below.
  Be concise and direct. If the information is insufficient, say so.
  
  Question: What is X?
  
  Retrieved information:
  X is 42.
  
  Answer:
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_empty_retrieved
  '''
  <retrieved_memory>
  
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_includes_retrieved_in_tags
  '''
  <retrieved_memory>
  fact1
  fact2
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestCompileFixSystemPrompt.test_format_works
  '''
  You are an expert Python programmer. A Memory Program failed to compile or run.
  Fix the error and output the complete corrected code in a ```python``` block.
  
  spec here
  
  Rules:
  1. Output ONLY the corrected code in a ```python``` block. No explanation needed.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix only what's broken.
  
  '''
# ---
# name: TestCompileFixSystemPrompt.test_instructs_fix
  '''
  You are an expert Python programmer. A Memory Program failed to compile or run.
  Fix the error and output the complete corrected code in a ```python``` block.
  
  spec
  
  Rules:
  1. Output ONLY the corrected code in a ```python``` block. No explanation needed.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix only what's broken.
  
  '''
# ---
# name: TestReflectionSystemPrompt.test_format_works
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose issues and produce an improved version.
  
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.log(message)`: Internal logging
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  
  ## Rules
  1. Output your diagnosis first, then the complete improved code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. Keep it simple. Fix only what is broken — do not over-engineer or rewrite working parts.
  
  '''
# ---
